header section is ready

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                    <!--banner section-->
 
-     <div  class="bg-[url('/images/banner_1.png')] bg-no-repeat bg-cover bg-center h-[36rem] relative">
+     <div  class="bg-[url('./images/banner_1.png')] bg-no-repeat bg-cover bg-center h-[36rem] relative">
         <div class="h-[36rem] bg-[#100F0FB3] flex flex-col justify-center items-center ">
             <div class="w-[85%] lg:w-[52%] text-center">
                 <h1 class="text-[2.5rem] md:text-[3.4rem] font-bold text-white leading-[3rem] md:leading-[4rem]">Taste Our Delicious Best Foods</h1>
